fix blurry image on mobil

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body{
 
 .card{
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  max-width: 100%;
 }
 .card:hover{
   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
